# ros2_opc_ua

./: .pre-commit-config.yaml  README.md
opcua_bringup/: CMakeLists.txt  README.md  package.xml
opcua_bringup/config/: README.md  opcua_controllers.yaml  san.cnf  server_cert.der  server_cert.pem  server_key.der
opcua_bringup/config/pki/: ca.cnf  ca_cert.der  ca_cert.pem  client_cert.der  client_cert.pem  client_key.der  client_san.cnf  server_cert.der  server_cert.pem  server_key.der  server_san.cnf
opcua_bringup/launch/: example_server.launch.py  example_server.launch.xml  example_server_secure.launch.xml  opcua_bringup.launch.xml  opcua_bringup_secure.launch.xml
opcua_bringup/src/: example_opcua_server.cpp  opcua_server.cpp
opcua_bringup/urdf/: opcua.urdf.xacro
opcua_bringup/urdf/control/: opcua_interfaces.ros2_control.xacro  opcua_macro.ros2_control.xacro
opcua_hardware_interface/: CMakeLists.txt  opcua_hardware_interface.xml  package.xml
opcua_hardware_interface/include/opcua_hardware_interface/: opcua_hardware_interface.hpp  opcua_helpers.hpp
opcua_hardware_interface/src/: opcua_hardware_interface.cpp
