<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opcua_bringup</name>
  <version>1.0.0</version>
  <description>Demo bringup package for the OPC UA hardware interface</description>
  <maintainer email="bartakh.hajar@gmail.com">Hajar Bartakh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>open62541pp_vendor</depend>
  <depend>rclcpp</depend>
  <depend>libssl-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
