<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>opcua_hardware_interface</name>
  <version>1.0.0</version>
  <description>Ros2 Control hardware interface for integrating with OPC UA</description>
  <maintainer email="bartakh.hajar@gmail.com">Hajar Bartakh</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>libssl-dev</depend>
  <depend>pluginlib</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>open62541pp_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
